dbeaver/pro#6074 Persist virtual keys created via popup dialog